Environment store deployer Work in progress